Added note about uv constraints

--- a/_posts/2025/05/2025-05-13-Parallax.md
+++ b/_posts/2025/05/2025-05-13-Parallax.md
@@ -115,6 +115,8 @@ One big problem with this approach is that it is quite branch heavy, this is one
 
 I'm also quite interested in looking into how the GPU deals with this many texture reads from a cache point of view. So I'll be reading into that shortly.
 
+In some cases, you may want to constrain the boundaries of this effect to the object so that it doesn't exceed the object's bounds. A smart way of doing this is discarding any fragments that fall outside of the regular UV space. I've not done that for this effect because I liked the idea of it tiling cleanly. 
+
 Below I've included the buttons that have been toggling features in this post so that you can easily compare things.
 
 Thanks for reading :)
